fix: black background for dark mode

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -4,6 +4,7 @@
 html {
   @media (prefers-color-scheme: dark) {
   //   @include v.$DarkTheme($DarkTheme: true);
+  background-color: black;
   }
 }
 
